fixed picture spacing

--- a/app/static/less/style_two.less
+++ b/app/static/less/style_two.less
@@ -794,7 +794,7 @@ body{ height: 100%; padding: 0; margin: 0; //
 .caption{
   font-family: "cantarellregular";
   margin-bottom: 5px;
-  max-width: 200px;
+
 }
 .blog_section_title{
       display: block;
